2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml:
	* MonoDevelop.Components/SearchEntry.cs: Fixed 'Bug 581629 -
	  Search and replace should not trim the search/replace term'.

2010-02-19  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml:
	* MonoDevelop.Components/SearchEntry.cs: Added the ability to
	  make more smart "find" menus.

2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Commands/Command.cs:
	* MonoDevelop.Components.Commands/CommandInfo.cs:
	* MonoDevelop.Components.Commands/ActionCommand.cs:
	* MonoDevelop.Components.Commands/CommandMenuItem.cs:
	* MonoDevelop.Components.Commands/CommandEntrySet.cs:
	* MonoDevelop.Components.Commands/LinkCommandEntry.cs:
	* MonoDevelop.Components.Commands/CommandArrayInfo.cs:
	* MonoDevelop.Components.Commands/CommandToolButton.cs:
	* MonoDevelop.Components.Commands/LocalCommandEntry.cs:
	* MonoDevelop.Components.Commands/CommandToggleToolButton.cs:
	  Use the new IconId type to represent icon names.

2010-02-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/FileEntry.cs:
	* MonoDevelop.Components/FolderEntry.cs:
	* MonoDevelop.Components/BaseFileEntry.cs: Use parent window
	  as TransientFor if not set.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Commands/CommandEntry.cs:
	* MonoDevelop.Components.Commands/CommandManager.cs: Added
	  missing id conversions.

2010-02-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/RoundedFrame.cs: Fixed flickering
	  problem.

2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs:
	* MonoDevelop.Components/HoverImageButton.cs: Added ability to
	  set filter button images.

2010-02-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.csproj:
	* MonoDevelop.Components.Theming:
	* MonoDevelop.Components/SearchEntry.cs:
	* MonoDevelop.Components/RoundedFrame.cs: