@@ -1,5 +1,10 @@
 2010-02-22  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Components/SearchEntry.cs: Added popup filter
+	  menu method.
+
+2010-02-22  Mike Krüger  <mkrueger@novell.com>
+
 	* gtk-gui/objects.xml:
 	* MonoDevelop.Components/SearchEntry.cs: Fixed 'Bug 581629 -
 	  Search and replace should not trim the search/replace term'.
